tests/snapshots/assets__check_file@unit-markup-content-raw.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/content-raw.typ
---
#align(
  center,
  table([
    ```
    underbrace(x + y, |A|)
    ```
  ]),
)
