tests/snapshots/assets__check_file@unit-markup-content-space.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/content-space.typ
---
#{
  show heading.where(level: 1): it => box(width: 100%)[#v(0.5em)]
}

#[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]#[
  1111111111111111111111111111111111111111
]
