tests/snapshots/assets__check_file@unit-markup-enum.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/enum.typ
---
Automatically numbered:
+ Preparations
+ Analysis
+ Conclusions

Manually numbered:
2. What is the first step?
5. I am confused.
+ Moving on ...

Multiple lines:
+ This enum item has multiple
  lines because the next line
  is indented.

Function call.
#enum[First][Second]
