tests/snapshots/assets__check_file@unit-markup-escape.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/markup/escape.typ
snapshot_kind: text
---
I got an ice cream for
\$1.50! \u{1f600}
